Navegação Implícita e explícita

--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/AjudaGestaoEmpresas.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/AjudaGestaoEmpresas.xhtml
@@ -5,7 +5,7 @@
 <h:head>
 
 <meta charset="UTF-8"/>
-<title>Gestão Empresas</title>
+<title>Ajuda</title>
 
 <h:outputStylesheet library="algaworks" name="estilo.css" />
 
@@ -16,17 +16,17 @@
 		<h:graphicImage library="algaworks" name="logo.png" />
 	</header>
 
+	 
+	 <h2>Ajuda</h2>
+	 	
 	<div id="conteudo">
+
 		<h:form>
-			<h:panelGrid columns="2">
-				<h:outputLabel value="Número: "/>
-				<h:outputText value="#{gestaoEmpresasBean.numero}" />
-				
-				<h:outputLabel />
-				<h:commandButton value="Salvar" />
-			</h:panelGrid>
+			<p>Esta é a ajuda da página de cadastro de empresas.</p>
 			
-			
+			<p>
+				<h:commandLink value="Voltar" action="GestaoEmpresas?faces-redirect=true"/>
+			</p>
 		</h:form>
 	</div>
 	<footer>
