--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
@@ -10,12 +10,10 @@
 <h:outputStylesheet library="algaworks" name="estilo.css" />
 
 </h:head>
-
 <h:body>
 	<header>
 		<h:graphicImage library="algaworks" name="logo.png" />
 	</header>
-
 	 	
 	<div id="conteudo">
 
@@ -38,9 +36,11 @@
 				
 				<h:outputLabel />
 				<h:commandButton value="Salvar" actionListener="#{gestaoEmpresasBean.salvar}" />
+								
+				<h:outputLabel />
+				<h:commandLink value="Ajuda?" action="#{gestaoEmpresasBean.ajuda}" />
 			</h:panelGrid>
 			
-
 			<h:dataTable value="#{[0, 0, 0, 0]}">
 				<h:column>
 				<f:facet name="header">
