--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
@@ -7,9 +7,10 @@
  	xmlns:p="http://primefaces.org/ui">
 <h:head>
 
-
 <meta charset="UTF-8"/>
 <title>Gestão Empresas</title>
+
+
 
 <h:outputStylesheet library="algaworks" name="estilo.css" />
 
@@ -29,7 +30,8 @@
 	<div id="conteudo">
 	
 	<p:dataTable value="#{gestaoEmpresasBean.listaEmpresas}"
-	var="empresa" emptyMessage="Nenhuma informação a ser exibida">
+	var="empresa" emptyMessage="Nenhuma informação a ser exibida"
+	paginator="true" rows="10" paginatorPosition="bottom">
 	<p:column headerText="Razao Social">
 		<h:outputText value="#{empresa.razaoSocial}" />
 	</p:column>
