Ordenando a tabela de dados por coluna

--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
@@ -28,11 +28,11 @@
 	<h2>Cadastro de Empresas</h2>
 	 	
 	<div id="conteudo">
-	
+	<h:form>
 	<p:dataTable value="#{gestaoEmpresasBean.listaEmpresas}"
 	var="empresa" emptyMessage="Nenhuma informação a ser exibida"
 	paginator="true" rows="10" paginatorPosition="bottom">
-	<p:column headerText="Razao Social">
+	<p:column headerText="Razao Social" sortBy="#{empresa.razaoSocial}">
 		<h:outputText value="#{empresa.razaoSocial}" />
 	</p:column>
 	
@@ -49,8 +49,9 @@
 		<h:outputText value="#{empresa.ramoAtividade.descricao}" />
 	</p:column>
 	
-	
 	</p:dataTable>
+	</h:form>
+	
 	</div>
 	<footer>
 		Curso online "JSF e PrimeFaces Essencial"
