--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
@@ -1,60 +1,48 @@
 
-
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
  	xmlns:h="http://xmlns.jcp.org/jsf/html"
  	xmlns:f="http://xmlns.jcp.org/jsf/core"
- 	xmlns:p="http://primefaces.org/ui">
-<h:head>
+ 	xmlns:p="http://primefaces.org/ui"
+ 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+ 	template="WEB-INF/template/Layout.xhtml">
 
-<meta charset="UTF-8"/>
-<title>Gestão Empresas</title>
+<ui:define name="titulo">
+	Cadastro de Empresas
+</ui:define>
 
 
 
-<h:outputStylesheet library="algaworks" name="estilo.css" />
+<ui:define name="conteudo">
 
 <f:metadata>
 	<f:viewAction action="#{gestaoEmpresasBean.todasEmpresas}" />
 </f:metadata>
 
-
-</h:head>
-
-<h:body>
-	<header>
-		<h:graphicImage library="algaworks" name="logo.png" />
-	</header>
-	<h2>Cadastro de Empresas</h2>
 	 	
-	<div id="conteudo">
-	<h:form>
-	<p:dataTable value="#{gestaoEmpresasBean.listaEmpresas}"
-	var="empresa" emptyMessage="Nenhuma informação a ser exibida"
-	paginator="true" rows="10" paginatorPosition="bottom">
-	<p:column headerText="Razao Social" sortBy="#{empresa.razaoSocial}">
-		<h:outputText value="#{empresa.razaoSocial}" />
-	</p:column>
+		<h:form>
+		<p:dataTable value="#{gestaoEmpresasBean.listaEmpresas}"
+		var="empresa" emptyMessage="Nenhuma informação a ser exibida"
+		paginator="true" rows="10" paginatorPosition="bottom">
+		<p:column headerText="Razao Social" sortBy="#{empresa.razaoSocial}">
+			<h:outputText value="#{empresa.razaoSocial}" />
+		</p:column>
+		
+			<p:column headerText="Nome fantasia">
+			<h:outputText value="#{empresa.nomeFantasia}" />
+		</p:column>
+		
+		
+			<p:column headerText="Tipo empresa">
+			<h:outputText value="#{empresa.tipo}" />
+		</p:column>
+		
+			<p:column headerText="Ramo atividade">
+			<h:outputText value="#{empresa.ramoAtividade.descricao}" />
+		</p:column>
+		
+		</p:dataTable>
+		</h:form>
 	
-		<p:column headerText="Nome fantasia">
-		<h:outputText value="#{empresa.nomeFantasia}" />
-	</p:column>
-	
-	
-		<p:column headerText="Tipo empresa">
-		<h:outputText value="#{empresa.tipo}" />
-	</p:column>
-	
-		<p:column headerText="Ramo atividade">
-		<h:outputText value="#{empresa.ramoAtividade.descricao}" />
-	</p:column>
-	
-	</p:dataTable>
-	</h:form>
-	
-	</div>
-	<footer>
-		Curso online "JSF e PrimeFaces Essencial"
-	</footer>
-</h:body>
-</html>
+</ui:define>
+</ui:composition>
