--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
@@ -29,7 +29,8 @@
 				<span class="ui-icon ui-icon-grip-dotted-vertical" />
 			</span>
 			
-			<p:commandButton value="Nova" icon="fa fa-plus"/>
+			<p:commandButton value="Nova" icon="fa fa-plus"
+				onclick="PF('empresaDialogWidgetVar').show()"/>
 			<span class="ui-separator">
 				<span class="ui-icon ui-icon-grip-dotted-vertical" />
 			</span>
@@ -72,6 +73,12 @@
 		</p:column>
 		
 		</p:dataTable>
+		
+		<p:dialog header="Nova empresa" widgetVar="empresaDialogWidgetVar"
+			modal="true" resizable="false" closeOnEscape="true">
+			<p:commandButton value="Teste"/>
+		</p:dialog>
+		
 		</h:form>
 	
 </ui:define>
