--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/Escopos.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/Escopos.xhtml
@@ -11,13 +11,14 @@
 
 </h:head>
 
+<!-- colocando o H: para q o JSF gerencie o BODY... ficando H:BODY -->
 <h:body>
 	<header>
 		<h:graphicImage library="algaworks" name="logo.png" />
 	</header>
 
 	<div id="conteudo">
-		<h:form>
+		<h:form>	
 			<h:panelGrid columns="2">
 				<h:outputLabel value="Número: "/>
 				<h:outputText value="#{gestaoEmpresasBean.numero}" />
