--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
@@ -18,12 +18,16 @@
 </f:metadata>
 	 	
 		<h:form>
+			<p:messages autoUpdate="true"/>
+		
+		
 		<p:toolbar>
 		<f:facet name="left">
 
 			<p:inputText placeholder="Digite aqui um termo para pesquisa..."
-				size="30"/>
-			<p:commandButton value="Pesquisar" icon="fa fa fa-search" />
+				size="30" value="#{gestaoEmpresasBean.termoPesquisa}"/>
+			<p:commandButton value="Pesquisar" icon="fa fa-search" 
+				actionListener="#{gestaoEmpresasBean.pesquisar}" update="empresasDataTable"/>
 			
 			<span class="ui-separator">
 				<span class="ui-icon ui-icon-grip-dotted-vertical" />
@@ -52,7 +56,7 @@
 		<p:spacer height="20"/>
 		
 		
-		<p:dataTable value="#{gestaoEmpresasBean.listaEmpresas}"
+		<p:dataTable id="empresasDataTable" value="#{gestaoEmpresasBean.listaEmpresas}"
 		var="empresa" emptyMessage="Nenhuma informação a ser exibida"
 		paginator="true" rows="10" paginatorPosition="bottom">
 		<p:column headerText="Razao Social" sortBy="#{empresa.razaoSocial}">
