Definindo o comando padrão

--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
@@ -88,6 +88,9 @@
 		<p:dialog id="empresaDialog" header="Nova empresa" widgetVar="empresaDialogWidgetVar"
 			modal="true" resizable="false" closeOnEscape="true">
 			<p:messages id="empresaMessages"/>
+			
+			<p:defaultCommand target="salvarCommandButton" scope="empresaDialog"/>
+			
 			<h:panelGrid id="empresaPanelGrid" columns="2"
 				rendered="#{gestaoEmpresasBean.empresa ne null}">
 				<p:outputLabel value="Razao social: " for="razaoSocial"/>
@@ -124,7 +127,7 @@
 					itemLabel="#{ramoAtividade.descricao}" itemValue="#{ramoAtividade}"/>
 				
 				<h:outputLabel />
-				<p:commandButton value="Salvar" actionListener="#{gestaoEmpresasBean.salvar}"
+				<p:commandButton id="salvarCommandButton" value="Salvar" actionListener="#{gestaoEmpresasBean.salvar}"
 					update="empresaPanelGrid empresaMessages"
 					oncomplete="if (!args.validationFailed) PF('empresaDialogWidgetVar').hide()" process="empresaDialog"/>
 				
