Selecionando linhas da tabela de dados

--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
@@ -21,7 +21,7 @@
 			<p:messages id="messages"/>
 		
 		
-		<p:toolbar>
+		<p:toolbar id="toolbar">
 		<f:facet name="left">
 
 			<p:inputText id="termoPesquisa" placeholder="Digite aqui um termo para pesquisa..."
@@ -46,8 +46,11 @@
 				<span class="ui-icon ui-icon-grip-dotted-vertical" />
 			</span>
 			
-			<p:commandButton title="Editar" icon="fa fa-edit"/>
-			<p:commandButton title="Excluir" icon="fa fa-trash"/>
+			<p:commandButton title="Editar" icon="fa fa-edit" 
+				disabled="#{not gestaoEmpresasBean.empresaSeleciona}"/>
+				
+			<p:commandButton title="Excluir" icon="fa fa-trash"
+				disabled="#{not gestaoEmpresasBean.empresaSeleciona}"/>
 			
 			<span class="ui-separator">
 				<span class="ui-icon ui-icon-grip-dotted-vertical" />
@@ -65,7 +68,17 @@
 		
 		<p:dataTable id="empresasDataTable" value="#{gestaoEmpresasBean.listaEmpresas}"
 		var="empresa" emptyMessage="Nenhuma informação a ser exibida"
-		paginator="true" rows="10" paginatorPosition="bottom">
+		paginator="true" rows="10" paginatorPosition="bottom"
+		selectionMode="single" selection="#{gestaoEmpresasBean.empresa}" rowKey="#{empresa.id}">
+		
+		
+		
+		<p:ajax event="rowSelect" update="frm:toolbar"/>
+		
+		
+		<p:ajax event="rowUnselect" update="frm:toolbar"/>
+		
+		
 		<p:column headerText="Razao Social" sortBy="#{empresa.razaoSocial}">
 			<h:outputText value="#{empresa.razaoSocial}" />
 		</p:column>
