--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
@@ -47,7 +47,12 @@
 			</span>
 			
 			<p:commandButton title="Editar" icon="fa fa-edit" 
-				disabled="#{not gestaoEmpresasBean.empresaSeleciona}"/>
+				disabled="#{not gestaoEmpresasBean.empresaSeleciona}"
+				actionListener="#{gestaoEmpresasBean.prepararEdicao}"
+				oncomplete="PF('empresaDialogWidgetVar').show()"
+				update="empresaDialog" process="@this">
+				<p:resetInput target="empresaDialog" />
+			</p:commandButton> 
 				
 			<p:commandButton title="Excluir" icon="fa fa-trash"
 				disabled="#{not gestaoEmpresasBean.empresaSeleciona}"/>
