--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
@@ -58,7 +58,10 @@
 				disabled="#{not gestaoEmpresasBean.empresaSeleciona}"
 				actionListener="#{gestaoEmpresasBean.excluir}"
 				update="messages empresasDataTable toolbar"
-				process="@this"/>
+				process="@this">
+				<p:confirm icon="ui-icon-alert" header="Confirmacao de excluisão" 
+					message="Posso excluir a empresa?"/>
+			</p:commandButton>
 			
 			<span class="ui-separator">
 				<span class="ui-icon ui-icon-grip-dotted-vertical" />
