--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/GestaoEmpresas.xhtml
@@ -1,4 +1,5 @@
 
+<!-- usando a TAG UI: pois o TEMPLATE/LAYOUT ta no LAYOUT.XHTML -->
 <!DOCTYPE html>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
  	xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -67,7 +68,10 @@
 				<span class="ui-icon ui-icon-grip-dotted-vertical" />
 			</span>
 				
-			<p:commandButton title="Exportar para o Excel" icon="fa fa-file-excel-o"/>
+			<p:commandButton title="Exportar para o Excel" icon="fa fa-file-excel-o"
+				ajax="false">
+				<p:dataExporter type="xls" target="empresasDataTable" fileName="Empresas"/>
+			</p:commandButton>
 		
 		</f:facet>
 
